--- a/02/Hausaufgabe-02-SaschaAngermann-102205656/Hausaufgabe-02.ipynb
+++ b/02/Hausaufgabe-02-SaschaAngermann-102205656/Hausaufgabe-02.ipynb
@@ -38,8 +38,9 @@
    "source": [
     "Füllen Sie folgende Felder aus:\n",
     "\n",
-    "Name:           ______________________________\n",
-    "Matrikelnummer: ______________________________"
+    "Name:           Sascha Angermann\n",
+    "\n",
+    "Matrikelnummer: 102205656"
    ]
   },
   {
