--- a/01/Hausaufgabe-01-SaschaAngermann-102205656/Hausaufgabe-01.ipynb
+++ b/01/Hausaufgabe-01-SaschaAngermann-102205656/Hausaufgabe-01.ipynb
@@ -14,7 +14,7 @@
    "id": "dc69ca52",
    "metadata": {},
    "source": [
-    "# Einfuerung in Python - IU - WS 2024/25\n",
+    "# Einfuerung in Python - IU - WS 2023/24\n",
     "<img style=\"width:40%;\" id=\"image\" src=\"python.png\">\n",
     "\n",
     "                                                               andreas.huemmer.ext@iu.org\n",
@@ -38,19 +38,20 @@
    "source": [
     "Füllen Sie folgende Felder aus:\n",
     "\n",
-    "Name:           ______________________________\n",
-    "Matrikelnummer: ______________________________"
+    "Name:           Sascha Angermann\n",
+    "\n",
+    "Matrikelnummer: 102205656"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "62483caa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.system('cmd command');"
+    "# import os\n",
+    "# os.system('cmd command');"
    ]
   },
   {
@@ -64,10 +65,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "06887f66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "     active environment : 01_saschaangermann\n",
+      "    active env location : C:\\Users\\Infi\\anaconda3\\envs\\01_saschaangermann\n",
+      "            shell level : 1\n",
+      "       user config file : C:\\Users\\Infi\\.condarc\n",
+      " populated config files : C:\\Users\\Infi\\anaconda3\\.condarc\n",
+      "                          C:\\Users\\Infi\\.condarc\n",
+      "          conda version : 24.11.0\n",
+      "    conda-build version : 24.9.0\n",
+      "         python version : 3.12.7.final.0\n",
+      "                 solver : libmamba (default)\n",
+      "       virtual packages : __archspec=1=skylake\n",
+      "                          __conda=24.11.0=0\n",
+      "                          __cuda=12.7=0\n",
+      "                          __win=0=0\n",
+      "       base environment : C:\\Users\\Infi\\anaconda3  (writable)\n",
+      "      conda av data dir : C:\\Users\\Infi\\anaconda3\\etc\\conda\n",
+      "  conda av metadata url : None\n",
+      "           channel URLs : https://repo.anaconda.com/pkgs/main/win-64\n",
+      "                          https://repo.anaconda.com/pkgs/main/noarch\n",
+      "                          https://repo.anaconda.com/pkgs/r/win-64\n",
+      "                          https://repo.anaconda.com/pkgs/r/noarch\n",
+      "                          https://repo.anaconda.com/pkgs/msys2/win-64\n",
+      "                          https://repo.anaconda.com/pkgs/msys2/noarch\n",
+      "          package cache : C:\\Users\\Infi\\anaconda3\\pkgs\n",
+      "                          C:\\Users\\Infi\\.conda\\pkgs\n",
+      "                          C:\\Users\\Infi\\AppData\\Local\\conda\\conda\\pkgs\n",
+      "       envs directories : C:\\Users\\Infi\\anaconda3\\envs\n",
+      "                          C:\\Users\\Infi\\.conda\\envs\n",
+      "                          C:\\Users\\Infi\\AppData\\Local\\conda\\conda\\envs\n",
+      "               platform : win-64\n",
+      "             user-agent : conda/24.11.0 requests/2.32.3 CPython/3.12.7 Windows/10 Windows/10.0.19045 solver/libmamba conda-libmamba-solver/24.9.0 libmambapy/1.5.8 aau/0.4.4 c/RvrasOgtw6R8HW76UTsnoQ s/axNmp10K637GO5aLZVG0rQ e/4g84-dk8hYffgXhIYBXuoA\n",
+      "          administrator : False\n",
+      "             netrc file : None\n",
+      "           offline mode : False\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Aufgabe 1 (1 Punkt)\n",
     "!conda info"
@@ -92,10 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f309d992",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zahl a ist:  (23+7j)    Zahl b ist:  (12-42j) \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "a = 23 + 7j\n",
     "b = 12 - 42j\n",
@@ -115,12 +168,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "c097be3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(23+7j) + (12-42j) = (35-35j)\n",
+      "(23+7j) - (12-42j) = (11+49j)\n",
+      "(23+7j) * (12-42j) = (570-882j)\n",
+      "(23+7j) / (12-42j) = (-0.009433962264150948+0.550314465408805j)\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n"
+    "print(f'{a} + {b} = {a+b}')\n",
+    "print(f'{a} - {b} = {a-b}')\n",
+    "print(f'{a} * {b} = {a*b}')\n",
+    "print(f'{a} / {b} = {a/b}')"
    ]
   },
   {
@@ -133,12 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "7295c0fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Re(23+7j) mod Re(12-42j) = 11\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n"
+    "a_real = int(a.real)\n",
+    "b_real = int(b.real)\n",
+    "print(f'Re{a} mod Re{b} = {a_real % b_real}')\n"
    ]
   },
   {
@@ -151,12 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "cbd1a79d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ergebnis: (12+42j)\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n"
+    "print(f'Ergebnis: {b.conjugate()}')"
    ]
   },
   {
@@ -184,10 +269,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "aa167ae2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Open your eyes, open your mind Proud like a god, don't pretend to be blind Trapped in yourself, break out instead Beat the machine that works in your head\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"Open your eyes, open your mind \\\n",
     "Proud like a god, don't pretend to be blind \\\n",
@@ -199,14 +292,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "39d02a6b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index des ersten Kommas: 14\n",
+      "Anzahl Kommatas: 3\n",
+      "Anzahl Wörter: 29\n",
+      "\n",
+      "Teilstrings nach Komma separiert:\n",
+      "Open your eyes\n",
+      " open your mind Proud like a god\n",
+      " don't pretend to be blind Trapped in yourself\n",
+      " break out instead Beat the machine that works in your head\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n"
+    "first_comma_index = text.find(',')\n",
+    "comma_amount = text.count(',')\n",
+    "word_count = len(text.split(' '))\n",
+    "sub_strings = text.split(',')\n",
+    "\n",
+    "print(f'Index des ersten Kommas: {first_comma_index}')\n",
+    "print(f'Anzahl Kommatas: {comma_amount}')\n",
+    "print(f'Anzahl Wörter: {word_count}')\n",
+    "\n",
+    "print(f'\\nTeilstrings nach Komma separiert:')\n",
+    "for sub_string in sub_strings:\n",
+    "    print(sub_string)"
    ]
   },
   {
@@ -229,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "a7d678a3",
    "metadata": {},
    "outputs": [],
@@ -240,12 +360,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "28c90aa9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Addition von Strings und Integers wirft einen Error vom Typ:\n",
+      "<class 'TypeError'>\n",
+      "unsupported operand type(s) for +: 'int' and 'str'\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n"
+    "try:\n",
+    "    zahl_sum = zahl + zahlstr\n",
+    "except TypeError as e:\n",
+    "    print(f'Die Addition von Strings und Integers wirft einen Error vom Typ:\\n{type(e)}')\n",
+    "    print(e)"
    ]
   },
   {
@@ -258,12 +392,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "22f259f4-d952-4b4b-8754-1778cf98a054",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ergebnis: 4\n",
+      "Typ vom Ergebnis: <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n"
+    "zahl_sum = zahl + int(zahlstr)\n",
+    "print(f'Ergebnis: {zahl_sum}')\n",
+    "print(f'Typ vom Ergebnis: {type(zahl_sum)}')"
    ]
   },
   {
@@ -295,10 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "91b0336a-0839-482f-8c72-6159959d8b9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7} {1, 3, 5, 'A', 7, 'B', 'C'} {0, 2, 4, 6, 8}\n"
+     ]
+    }
+   ],
    "source": [
     "set1 = {1, 2, 3, 4, 5, 6, 7}\n",
     "set2 = {1, 3, 5, 7, \"A\", \"B\", \"C\"}\n",
@@ -322,13 +475,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f13e8ca1-9145-417a-8874-081c5872dc3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Schnittmenge set1 & set2: {1, 3, 5, 7}\n",
+      "Schnittmenge set2 & set3: set()\n",
+      "Schnittmenge set1 & set3: {2, 4, 6}\n",
+      "Schnittmenge set2 & set3: set()\n",
+      "\n",
+      "Vereinigungsmenge set1, set2 & set3: {0, 1, 2, 3, 4, 5, 6, 7, 'A', 'C', 8, 'B'}\n",
+      "Vereinigungsmenge set1, set2 & set3 + var: {0, 1, 2, 3, 4, 5, 6, 7, 'A', 'C', 8, 'B'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n",
-    "\n"
+    "print(f'Schnittmenge set1 & set2: {set1 & set2}')\n",
+    "\n",
+    "print(f'Schnittmenge set2 & set3: {set2 & set3}')\n",
+    "\n",
+    "print(f'Schnittmenge set1 & set3: {set1 & set3}')\n",
+    "\n",
+    "print(f'Schnittmenge set2 & set3: {set1 & set2 & set3}')\n",
+    "\n",
+    "vereinigung_1_2_3 = set1 | set2 | set3\n",
+    "print(f'\\nVereinigungsmenge set1, set2 & set3: {vereinigung_1_2_3}')\n",
+    "\n",
+    "vereinigung_1_2_3.add(var) # Ist bereits vorhanden, also kein neues Element\n",
+    "print(f'Vereinigungsmenge set1, set2 & set3 + var: {vereinigung_1_2_3}')"
    ]
   },
   {
@@ -360,10 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "3ed7fdcd-2d8c-423a-b8e6-96549caa210b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5] ['A', 'B', 'C', 1, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "liste1 = [1, 2, 3, 4, 5]\n",
     "liste2 = [\"A\", \"B\", \"C\", 1, 3]\n",
@@ -385,12 +571,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "f4a6a4a3-5f35-4871-9277-650dd5bde017",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "liste2 mit element 7: ['A', 'B', 'C', 1, 3, 7]\n",
+      "\n",
+      "Vereinigung von liste1 und liste2 inkl. Element 7:\n",
+      "[1, 2, 3, 4, 5, 'A', 'B', 'C', 1, 3, 7]\n",
+      "\n",
+      "Vereinigungsmenge von liste1 und liste2 inkl. Element 7 (als Set):\n",
+      "{1, 2, 3, 4, 5, 'A', 7, 'C', 'B'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n",
+    "liste2.append(7)\n",
+    "liste_1_2 = liste1 + liste2\n",
+    "\n",
+    "print(f'liste2 mit element 7: {liste2}')\n",
+    "print(f'\\nVereinigung von liste1 und liste2 inkl. Element 7:\\n{liste_1_2}')\n",
+    "print(f'\\nVereinigungsmenge von liste1 und liste2 inkl. Element 7 (als Set):\\n{set(liste_1_2)}')\n",
     "\n"
    ]
   },
@@ -413,22 +618,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "87dad0ed-7efb-4273-96da-f950c1cf019b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Matrizen - list, mumpy\n",
+    "#Matrizen - list, mumpy\n",
     "\n",
-    "Gegeben sind die folgenden Matrizen, einmal als Python und einmal als NumPy variante."
+    "#Gegeben sind die folgenden Matrizen, einmal als Python und einmal als NumPy variante."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "b51e956c-40bf-4546-812a-a2e102f1a097",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 3, 5], [7, 9, 11], [13, 15, 17]] [[2, 4, 6], [8, 10, 12], [14, 16, 18]]\n"
+     ]
+    }
+   ],
    "source": [
     "matrix1 = [ [1, 3, 5],\n",
     "            [7, 9, 11],\n",
@@ -451,21 +664,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "1c9b1625-8bd4-47bf-8429-46835e338583",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ergebnis der Matrixmultiplikation (Python):\n",
+      "[[96, 114, 132], [240, 294, 348], [384, 474, 564]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n",
-    "\n"
+    "def calc_matrix_product(m1, m2):\n",
+    "    matrix_product = [[0 for _m2 in range(len(m2))] for _m1 in range(len(m1))]\n",
+    "    \n",
+    "    for i in range(len(m1)):\n",
+    "        for j in range(len(m2[0])):\n",
+    "            for k in range(len(m1[0])):\n",
+    "                matrix_product[i][j] += m1[i][k] * m2[k][j]\n",
+    "    \n",
+    "    return matrix_product\n",
+    "\n",
+    "print(f'Ergebnis der Matrixmultiplikation (Python):\\n{calc_matrix_product(matrix1, matrix2)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "eb81ee70-4f52-48f0-9ea1-f32ea8f4606c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 3, 5], [7, 9, 11], [13, 15, 17]] [[2, 4, 6], [8, 10, 12], [14, 16, 18]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -490,13 +729,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "08ca0f85-4b64-4df9-bc8e-dccb90188793",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ergebnis der Matrixmultiplikation (NumPy):\n",
+      "[[ 96 114 132]\n",
+      " [240 294 348]\n",
+      " [384 474 564]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n",
-    "\n"
+    "print(f'Ergebnis der Matrixmultiplikation (NumPy):\\n{np.dot(np_matrix1, np_matrix2)}')"
    ]
   },
   {
@@ -531,13 +780,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "da904c38-4538-4df5-9add-3d9fd22d0c4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Datei nichda.txt konnte nicht gefunden werden.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lesen beendet.\n"
+     ]
+    }
+   ],
    "source": [
-    "#### hier kommt Ihr Code ####\n",
-    "\n"
+    "import logging\n",
+    "\n",
+    "file1_name = 'nichda.txt'\n",
+    "file2_name = 'hallo.txt'\n",
+    "\n",
+    "try:\n",
+    "    with open(file1_name, 'r') as file1:\n",
+    "        print(f'Inhalt von {file1_name}: {file1.read()}')\n",
+    "        file1.close()\n",
+    "\n",
+    "    with open(file2_name, 'r') as file2:\n",
+    "        print(f'Inhalt von {file2_name}: {file2.read()}')\n",
+    "        file2.close()\n",
+    "\n",
+    "except FileNotFoundError as e:\n",
+    "    logging.error(f'Datei {e.filename} konnte nicht gefunden werden.')\n",
+    "finally:\n",
+    "    print('Lesen beendet.')"
    ]
   },
   {
@@ -568,7 +848,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "01_saschaangermann",
    "language": "python",
    "name": "python3"
   },
@@ -582,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
